--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/kanietos/Desktop/Term2/bew hm/playlister/env/bin/python3"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
