--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,3 +1,3 @@
-home = /anaconda3/bin
+home = /Users/kanietos/Desktop/Term2/bew hm/playlister/env/bin
 include-system-site-packages = false
 version = 3.7.1
