--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pylint==2.4.4
+pymongo==3.9.0
 six==1.13.0
 typed-ast==1.4.0
 Werkzeug==0.16.0
